--- a/index.html
+++ b/index.html
@@ -3,37 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive pricing component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
+<body class="container">
+  <header>
+    <h1>Simple, traffic-based pricing</h1>
+    <h3 class="header-text">Sign-up for our 30-day trial. No credit card required.</h3>
+  </header>
+  <main>
+    <section id="topCard" class="section_card top-card">
+      <div id="cardHeader" class="card-header">
+        <h4 id="pageView" class="card-header-text"><span id="pageViews">50K</span> PAGEVIEWS</h4>
+        <div class="amtSliderContainer">
+          <input id="amtChanger" class="amtSlider" type="range" min="0" max="4" value="2" steps="1">
+        </div>
+        <h4 id="monthAmt" class="card-header-text"><span id="amtPerMonth" class="amtText">$16.00</span> / month</h4>
+      </div>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+      <div class="card-billing">
+        <p>Monthly Billing</p>
+        <input class="checkbox" id="toggle" type="checkbox" />
+        <label for="toggle" class="switch"></label>
+        <p id="discountText" class="addDiscount active">Yearly Billing</p>
+      </div>
+    
+    </section>
 
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
+    <section id="bottomCard" class="section_card bottom-card">
+      <aside>
+      <p><img class="checkmark" src="./images/icon-check.svg" />Unlimited websites</p>
+      <p><img class="checkmark" src="./images/icon-check.svg" />100% data ownership</p>
+      <p><img class="checkmark" src="./images/icon-check.svg" />Email reports</p>
+    </aside>
+      <button>
+        Start my trial
+      </button>
+    
+    </section>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </main>
+  
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Jennifer D. Ignacio</a>.
+    </div>  
+  </footer>
 </body>
+<script src="index.js"></script>
 </html>
