--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
     <section id="topCard" class="section_card top-card">
       <div id="cardHeader" class="card-header">
         <h4 id="pageView" class="card-header-text"><span id="pageViews">50K</span> PAGEVIEWS</h4>
-        <div class="amtSliderContainer">
+        <div id="slider" class="amtSliderContainer">
           <input id="amtChanger" class="amtSlider" type="range" min="0" max="4" value="2" steps="1">
         </div>
-        <h4 id="monthAmt" class="card-header-text"><span id="amtPerMonth" class="amtText">$16.00</span> / month</h4>
+        <h4 id="monthAmt" class="card-header-text"><span id="amtPerMonth" class="amtText">$16.00</span><span>/ month</span></h4>
       </div>
 
-      <div class="card-billing">
+      <div id="cardBilling" class="card-billing">
         <p>Monthly Billing</p>
         <input class="checkbox" id="toggle" type="checkbox" />
-        <label for="toggle" class="switch"></label>
         <p id="discountText" class="addDiscount active">Yearly Billing</p>
       </div>
     
