--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div id="slider" class="amtSliderContainer">
           <input id="amtChanger" class="amtSlider" type="range" min="0" max="4" value="2" steps="1">
         </div>
-        <h4 id="monthAmt" class="card-header-text"><span id="amtPerMonth" class="amtText">$16.00</span><span>/ month</span></h4>
+        <h4 id="monthAmt" class="card-header-text"><span id="amtPerMonth" class="amtText">$16.00</span><span id="perMonthText">/ month</span></h4>
       </div>
 
       <div id="cardBilling" class="card-billing">
         <p>Monthly Billing</p>
         <input class="checkbox" id="toggle" type="checkbox" />
-        <p id="discountText" class="addDiscount active">Yearly Billing</p>
+        <p id="discountText" class="addDiscount">Yearly Billing</p>
       </div>
     
     </section>
